# tg-analys

./: .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 543a7870e015_init.py  68d545231163_fix_int_channels.py  7a29f5b622ba_int_to_bigint.py  c6c075ee218d_fix_columns.py  fde121c934df_guid_to_id.py
api/: Dockerfile  client.py  config.py  main.py  pyproject.toml
api/channels/: router.py
api/users/: router.py
docker/: docker-compose-dev.yml
src/: config.py  consts.py  database.py  filters.py  keyboards.py  main.py  middlewares.py  parser.py  providers.py  repository.py  router.py  schemas.py  service.py  utils.py
src/bg_tasks/: channels_scan.py  main.py
src/channels/: keyboards.py  models.py  parser.py  repository.py  router.py  schemas.py  service.py  states.py
src/moderation/: keyboards.py  router.py  states.py
src/oauth/: google.py
src/posts/: models.py  repository.py  service.py
src/prompts/: dependencies.py  keyboards.py  models.py  repository.py  router.py  schemas.py  service.py  states.py
src/roles/: enums.py  filters.py  init.py  keyboards.py  models.py  repository.py  schemas.py  service.py
src/users/: dependencies.py  init.py  keyboards.py  models.py  router.py  schemas.py  service.py  states.py
src/voice_to_text/: service.py  utils.py
